--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Dashboard.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/Dashboard.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -29,49 +30,65 @@
                 <Image url="@../Icons/Functional/logo.png" />
             </image>
         </ImageView>
-        <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" layoutX="287.0" layoutY="146.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
-        <ImageView fitHeight="85.0" fitWidth="90.0" layoutX="348.0" layoutY="181.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../Icons/Functional/Clubs.png" />
-            </image>
-        </ImageView>
-        <Label layoutX="369.0" layoutY="273.0" text="Home" textFill="WHITE">
-            <font>
-                <Font name="Calibri Bold" size="17.0" />
-            </font>
-        </Label>
-        <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" layoutX="774.0" layoutY="146.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
-        <ImageView fitHeight="85.0" fitWidth="83.0" layoutX="836.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../Icons/Functional/ClubManage.png" />
-            </image>
-        </ImageView>
-        <Label layoutX="858.0" layoutY="273.0" text="Clubs" textFill="WHITE">
-            <font>
-                <Font name="Calibri Bold" size="17.0" />
-            </font>
-        </Label>
-        <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" layoutX="288.0" layoutY="461.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
-        <ImageView fitHeight="85.0" fitWidth="71.0" layoutX="355.0" layoutY="497.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../Icons/Functional/Events.png" />
-            </image>
-        </ImageView>
-        <Label layoutX="367.0" layoutY="591.0" text="Events" textFill="WHITE">
-            <font>
-                <Font name="Calibri Bold" size="17.0" />
-            </font>
-        </Label>
-        <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" layoutX="775.0" layoutY="461.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
-        <ImageView fitHeight="83.0" fitWidth="71.0" layoutX="843.0" layoutY="497.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../Icons/Functional/Attendence.png" />
-            </image>
-        </ImageView>
-        <Label layoutX="843.0" layoutY="578.0" text="Attendence" textFill="WHITE">
-            <font>
-                <Font name="Calibri Bold" size="17.0" />
-            </font>
-        </Label>
+      <Group fx:id="homeGroup" layoutX="287.0" layoutY="146.0">
+         <children>
+              <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
+              <ImageView fitHeight="85.0" fitWidth="90.0" layoutX="61.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                      <Image url="@../Icons/Functional/Clubs.png" />
+                  </image>
+              </ImageView>
+              <Label layoutX="82.0" layoutY="127.0" text="Home" textFill="WHITE">
+                  <font>
+                      <Font name="Calibri Bold" size="17.0" />
+                  </font>
+              </Label>
+         </children>
+      </Group>
+      <Group fx:id="clubGroup" layoutX="774.0" layoutY="146.0">
+         <children>
+              <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
+              <ImageView fitHeight="85.0" fitWidth="83.0" layoutX="62.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                      <Image url="@../Icons/Functional/ClubManage.png" />
+                  </image>
+              </ImageView>
+              <Label layoutX="84.0" layoutY="127.0" text="Clubs" textFill="WHITE">
+                  <font>
+                      <Font name="Calibri Bold" size="17.0" />
+                  </font>
+              </Label>
+         </children>
+      </Group>
+      <Group fx:id="eventGroup" layoutX="288.0" layoutY="461.0">
+         <children>
+              <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
+              <ImageView fitHeight="85.0" fitWidth="71.0" layoutX="67.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                      <Image url="@../Icons/Functional/Events.png" />
+                  </image>
+              </ImageView>
+              <Label layoutX="79.0" layoutY="130.0" text="Events" textFill="WHITE">
+                  <font>
+                      <Font name="Calibri Bold" size="17.0" />
+                  </font>
+              </Label>
+         </children>
+      </Group>
+      <Group fx:id="attendenceGroup" layoutX="775.0" layoutY="461.0">
+         <children>
+              <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
+              <ImageView fitHeight="83.0" fitWidth="71.0" layoutX="68.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                      <Image url="@../Icons/Functional/Attendence.png" />
+                  </image>
+              </ImageView>
+              <Label layoutX="68.0" layoutY="117.0" text="Attendence" textFill="WHITE">
+                  <font>
+                      <Font name="Calibri Bold" size="17.0" />
+                  </font>
+              </Label>
+         </children>
+      </Group>
     </children>
 </AnchorPane>
