--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
@@ -4,13 +4,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -214,6 +219,113 @@
             <TextField fx:id="studentUsernameLogin" layoutX="88.0" layoutY="180.0" prefHeight="40.0" prefWidth="279.0" style="-fx-background-radius: 30;" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
             <Text fill="WHITE" layoutX="40.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
             <TextField fx:id="studentPasswordLogin" layoutX="129.0" layoutY="258.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
+         </children>
+      </Group>
+      <Group fx:id="joinClub" disable="true" layoutX="787.0" layoutY="239.0" opacity="0.0">
+         <children>
+            <TableView fx:id="Tablejoin" layoutX="-78.0" layoutY="-56.0" prefHeight="398.0" prefWidth="556.0">
+              <columns>
+                  <TableColumn fx:id="clubIdJoin" prefWidth="75.0" text="ClubID" />
+                <TableColumn fx:id="clubNameJoin" prefWidth="75.0" text="Club Name" />
+                <TableColumn fx:id="clubDescriptionJoin" prefWidth="100.0" text="Club Description" />
+                  <TableColumn fx:id="clubCategoryJoin" prefWidth="75.0" text="Category" />
+                  <TableColumn fx:id="clubAdvisorJoin" prefWidth="96.0" text="Club Advisor" />
+                  <TableColumn fx:id="clubEmailJoin" prefWidth="68.0" text="Email" />
+                  <TableColumn fx:id="clubContactJoin" prefWidth="66.0" text="Contact" />
+              </columns>
+            </TableView>
+            <Button fx:id="clubJoin" layoutX="111.0" layoutY="371.0" mnemonicParsing="false" onAction="#onClickJoinClub" onMouseEntered="#registerButtonMouseEnter" onMouseExited="#registerButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Join" textFill="WHITE">
+               <font>
+                  <Font name="Calibri Bold" size="22.0" />
+               </font>
+            </Button>
+         </children>
+      </Group>
+      <Group fx:id="Dashboardpage" layoutX="-11.0" layoutY="-99.0" visible="false">
+         <children>
+            <AnchorPane layoutX="3.0" layoutY="100.0" prefHeight="735.0" prefWidth="1292.0" style="-fx-background-color: black;" stylesheets="@../../../../../../../../../../Second%20Year/OOP%20Programming/coursework/School-Activity-Club-Management-System/project-SACMS/src/main/resources/com/main/projectsacms/CSS%20Files/AttendencePage.css">
+               <children>
+                  <Pane prefHeight="39.0" prefWidth="1292.0" style="-fx-background-color: #75e3eb;">
+                     <children>
+                        <ImageView fitHeight="17.0" fitWidth="17.0" layoutX="1241.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../../../../Second%20Year/OOP%20Programming/coursework/School-Activity-Club-Management-System/project-SACMS/src/main/resources/com/main/projectsacms/Icons/Functional/close.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="31.0" fitWidth="17.0" layoutX="1217.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../../../../Second%20Year/OOP%20Programming/coursework/School-Activity-Club-Management-System/project-SACMS/src/main/resources/com/main/projectsacms/Icons/Functional/minimize.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </Pane>
+                  <ImageView fitHeight="252.0" fitWidth="317.0" layoutX="-20.0" layoutY="-106.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../../../../Second%20Year/OOP%20Programming/coursework/School-Activity-Club-Management-System/project-SACMS/src/main/resources/com/main/projectsacms/Icons/Functional/logo.png" />
+                     </image>
+                  </ImageView>
+                  <Group fx:id="homeGroup" layoutX="287.0" layoutY="146.0">
+                     <children>
+                        <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
+                        <ImageView fitHeight="85.0" fitWidth="90.0" layoutX="61.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../../../../Second%20Year/OOP%20Programming/coursework/School-Activity-Club-Management-System/project-SACMS/src/main/resources/com/main/projectsacms/Icons/Functional/Clubs.png" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="82.0" layoutY="127.0" text="Home" textFill="WHITE">
+                           <font>
+                              <Font name="Calibri Bold" size="17.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Group>
+                  <Group fx:id="clubGroup" layoutX="774.0" layoutY="146.0" onMouseClicked="#onclickViewJoinTables">
+                     <children>
+                        <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
+                        <ImageView fitHeight="85.0" fitWidth="83.0" layoutX="62.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../../../../Second%20Year/OOP%20Programming/coursework/School-Activity-Club-Management-System/project-SACMS/src/main/resources/com/main/projectsacms/Icons/Functional/ClubManage.png" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="84.0" layoutY="127.0" text="Clubs" textFill="WHITE">
+                           <font>
+                              <Font name="Calibri Bold" size="17.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Group>
+                  <Group fx:id="eventGroup" layoutX="288.0" layoutY="461.0">
+                     <children>
+                        <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
+                        <ImageView fitHeight="85.0" fitWidth="71.0" layoutX="67.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../../../../Second%20Year/OOP%20Programming/coursework/School-Activity-Club-Management-System/project-SACMS/src/main/resources/com/main/projectsacms/Icons/Functional/Events.png" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="79.0" layoutY="130.0" text="Events" textFill="WHITE">
+                           <font>
+                              <Font name="Calibri Bold" size="17.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Group>
+                  <Group fx:id="attendenceGroup" layoutX="775.0" layoutY="461.0">
+                     <children>
+                        <Rectangle arcHeight="20.0" arcWidth="20.0" height="195.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="206.0" />
+                        <ImageView fitHeight="83.0" fitWidth="71.0" layoutX="68.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../../../../Second%20Year/OOP%20Programming/coursework/School-Activity-Club-Management-System/project-SACMS/src/main/resources/com/main/projectsacms/Icons/Functional/Attendence.png" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="68.0" layoutY="117.0" text="Attendence" textFill="WHITE">
+                           <font>
+                              <Font name="Calibri Bold" size="17.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Group>
+               </children>
+            </AnchorPane>
          </children>
       </Group>
    </children>
