--- a/project-SACMS/src/main/resources/com/example/clubcreation/hello-view.fxml
+++ b/project-SACMS/src/main/resources/com/example/clubcreation/hello-view.fxml
@@ -102,13 +102,8 @@
                   <Button fx:id="btnClear" layoutX="833.0" layoutY="606.0" mnemonicParsing="false" onAction="#clearProfile" prefHeight="34.0" prefWidth="76.0" styleClass="closeButton" stylesheets="@../../main/projectsacms/CSS%20Files/styles.css" text="Clear" textFill="WHITE" />
                </children>
             </Pane>
-            <Pane fx:id="pnlWelcomePage" prefHeight="606.0" prefWidth="1023.0" style="-fx-background-radius: 15px;" styleClass="pane" stylesheets="@../../main/projectsacms/CSS%20Files/styles.css">
+            <Pane fx:id="pnlWelcomePage" prefHeight="606.0" prefWidth="1023.0" style="-fx-background-radius: 15px;" styleClass="pane2" stylesheets="@../../main/projectsacms/CSS%20Files/styles.css">
                <children>
-                  <Label layoutX="209.0" layoutY="56.0" prefHeight="98.0" prefWidth="547.0" styleClass="header" stylesheets="@../../main/projectsacms/CSS%20Files/styles.css" text="Welcome to the SACMS!">
-                     <font>
-                        <Font name="Arial Bold" size="36.0" />
-                     </font>
-                  </Label>
                   <ImageView fitHeight="228.0" fitWidth="236.0" layoutX="213.0" layoutY="296.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../main/projectsacms/IMG/Create.png" />
@@ -129,14 +124,9 @@
                         <Font name="Arial" size="14.0" />
                      </font>
                   </Button>
-                  <ImageView fitHeight="147.0" fitWidth="152.0" layoutX="714.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../main/projectsacms/GIF/rocket-158_512.gif" />
-                     </image>
-                  </ImageView>
                </children>
             </Pane>
-            <Pane fx:id="pnlClubProfiles" prefHeight="606.0" prefWidth="1023.0" style="-fx-background-radius: 15px;" styleClass="linear-grad" stylesheets="@../../main/projectsacms/CSS%20Files/styles.css" visible="false">
+            <Pane fx:id="pnlClubProfiles" prefHeight="606.0" prefWidth="1023.0" style="-fx-background-radius: 15px;" styleClass="linear-grad" stylesheets="@../../main/projectsacms/CSS%20Files/styles.css">
                <children>
                   <Label layoutX="48.0" layoutY="32.0" prefHeight="22.0" prefWidth="113.0" text="Clubs" textFill="WHITE">
                      <font>
@@ -166,7 +156,7 @@
                         <TableColumn fx:id="colProfilePicture" prefWidth="112.7999267578125" text="Profile Picture" />
                     </columns>
                   </TableView>
-                  <Pane fx:id="pnlUpdate" layoutX="-1.0" layoutY="289.0" prefHeight="384.0" prefWidth="998.0" visible="false">
+                  <Pane fx:id="pnlUpdate" layoutX="-1.0" layoutY="289.0" prefHeight="384.0" prefWidth="998.0">
                      <children>
                         <VBox layoutX="428.0" layoutY="32.0" prefHeight="300.0" prefWidth="528.0">
                            <children>
