--- a/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
+++ b/project-SACMS/src/main/resources/com/main/projectsacms/FXML Files/startPage.fxml
@@ -221,26 +221,6 @@
             <TextField fx:id="studentPasswordLogin" layoutX="129.0" layoutY="258.0" prefHeight="40.0" prefWidth="198.0" styleClass="form-area" stylesheets="@../CSS%20Files/Dashboard.css" />
          </children>
       </Group>
-      <Group fx:id="joinClub" disable="true" layoutX="787.0" layoutY="239.0" opacity="0.0">
-         <children>
-            <TableView fx:id="Tablejoin" layoutX="-78.0" layoutY="-56.0" prefHeight="398.0" prefWidth="556.0">
-              <columns>
-                  <TableColumn fx:id="clubIdJoin" prefWidth="75.0" text="ClubID" />
-                <TableColumn fx:id="clubNameJoin" prefWidth="75.0" text="Club Name" />
-                <TableColumn fx:id="clubDescriptionJoin" prefWidth="100.0" text="Club Description" />
-                  <TableColumn fx:id="clubCategoryJoin" prefWidth="75.0" text="Category" />
-                  <TableColumn fx:id="clubAdvisorJoin" prefWidth="96.0" text="Club Advisor" />
-                  <TableColumn fx:id="clubEmailJoin" prefWidth="68.0" text="Email" />
-                  <TableColumn fx:id="clubContactJoin" prefWidth="66.0" text="Contact" />
-              </columns>
-            </TableView>
-            <Button fx:id="clubJoin" layoutX="111.0" layoutY="371.0" mnemonicParsing="false" onAction="#onClickJoinClub" onMouseEntered="#registerButtonMouseEnter" onMouseExited="#registerButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Join" textFill="WHITE">
-               <font>
-                  <Font name="Calibri Bold" size="22.0" />
-               </font>
-            </Button>
-         </children>
-      </Group>
       <Group fx:id="Dashboardpage" layoutX="-11.0" layoutY="-99.0" visible="false">
          <children>
             <AnchorPane layoutX="3.0" layoutY="100.0" prefHeight="735.0" prefWidth="1292.0" style="-fx-background-color: black;" stylesheets="@../../../../../../../../../../Second%20Year/OOP%20Programming/coursework/School-Activity-Club-Management-System/project-SACMS/src/main/resources/com/main/projectsacms/CSS%20Files/AttendencePage.css">
@@ -328,5 +308,92 @@
             </AnchorPane>
          </children>
       </Group>
+      <AnchorPane fx:id="clubDisplayPage" layoutX="-6.0" layoutY="-6.0" prefHeight="735.0" prefWidth="1292.0" style="-fx-background-color: black;" visible="false">
+         <children>
+            <Pane prefHeight="39.0" prefWidth="1292.0" style="-fx-background-color: #75e3eb;">
+               <children>
+                  <ImageView fitHeight="17.0" fitWidth="17.0" layoutX="1252.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../Icons/Functional/close.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="31.0" fitWidth="17.0" layoutX="1225.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../Icons/Functional/minimize.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="252.0" fitWidth="317.0" layoutX="-24.0" layoutY="-106.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../Icons/Functional/logo.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Rectangle arcHeight="20.0" arcWidth="20.0" height="75.0" layoutX="211.0" layoutY="81.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="151.0" />
+            <ImageView fitHeight="47.0" fitWidth="39.0" layoutX="265.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Icons/Functional/Clubs.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="263.0" layoutY="127.0" text="Home" textFill="WHITE">
+               <font>
+                  <Font name="Calibri Bold" size="17.0" />
+               </font>
+            </Label>
+            <Rectangle arcHeight="20.0" arcWidth="20.0" height="75.0" layoutX="675.0" layoutY="81.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="151.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" height="75.0" layoutX="928.0" layoutY="81.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="151.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" height="75.0" layoutX="428.0" layoutY="81.0" stroke="#00fff7" strokeType="INSIDE" strokeWidth="4.0" width="151.0" />
+            <ImageView fitHeight="39.0" fitWidth="39.0" layoutX="484.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Icons/Functional/ClubManage.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="484.0" layoutY="127.0" text="Clubs" textFill="WHITE">
+               <font>
+                  <Font name="Calibri Bold" size="17.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="39.0" fitWidth="39.0" layoutX="731.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Icons/Functional/Events.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="727.0" layoutY="129.0" text="Events" textFill="WHITE">
+               <font>
+                  <Font name="Calibri Bold" size="17.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="39.0" fitWidth="39.0" layoutX="984.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Icons/Functional/Attendence.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="962.0" layoutY="129.0" text="Attendence" textFill="WHITE">
+               <font>
+                  <Font name="Calibri Bold" size="17.0" />
+               </font>
+            </Label>
+            <Group fx:id="joinClub" layoutX="400.0" layoutY="245.0">
+               <children>
+                  <TableView fx:id="Tablejoin" layoutX="-216.0" layoutY="-56.0" prefHeight="398.0" prefWidth="938.0">
+                    <columns>
+                        <TableColumn fx:id="clubIdJoin" prefWidth="87.0" text="ClubID" />
+                      <TableColumn fx:id="clubNameJoin" prefWidth="95.0" text="Club Name" />
+                      <TableColumn fx:id="clubDescriptionJoin" prefWidth="233.0" text="Club Description" />
+                        <TableColumn fx:id="clubCategoryJoin" prefWidth="90.0" text="Category" />
+                        <TableColumn fx:id="clubAdvisorJoin" prefWidth="139.0" text="Club Advisor" />
+                        <TableColumn fx:id="clubEmailJoin" prefWidth="163.0" text="Email" />
+                        <TableColumn fx:id="clubContactJoin" prefWidth="130.0" text="Contact" />
+                    </columns>
+                  </TableView>
+                  <Button fx:id="clubJoin" layoutX="168.0" layoutY="361.0" mnemonicParsing="false" onAction="#onClickJoinClub" onMouseEntered="#registerButtonMouseEnter" onMouseExited="#registerButtonMouseExit" prefHeight="53.0" prefWidth="170.0" style="-fx-background-radius: 30;" styleClass="RegisterButtons" stylesheets="@../CSS%20Files/Dashboard.css" text="Join" textFill="WHITE">
+                     <font>
+                        <Font name="Calibri Bold" size="22.0" />
+                     </font>
+                  </Button>
+               </children>
+            </Group>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
